# psar-app

./: .gitignore  pasr-api.code-workspace
pasr-api/: main.py  pyproject.toml
pasr-api/app/: config.py
pasr-api/app/api/: main.py
pasr-api/app/core/: celery_task.py  database.py  dify_api.py  file_server.py  llm.py  utils.py
pasr-api/app/core/review/: llm.py  parallel.py  parse_file.py  runner.py
pasr-web/: index.html  package.json  pnpm-lock.yaml
pasr-web/src/: App.tsx
pasr-web/src/pages/: PSARPage.tsx
