[project]
name = "pasr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "celery[redis]>=5.5.3",
    "fastapi[all]>=0.116.1",
    "loguru>=0.7.3",
    "openai>=1.97.1",
    "sqlmodel>=0.0.24",
]
